Wed Nov 18 06:59:52 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): grow buffer
	  on unspecified maxdatlen
	  [ruby-core:71517] [Bug #11701]
	* ext/socket/lib/socket.rb (Socket#recvmsg): nil default for dlen
	  (Socket#recvmsg_nonblock): ditto
	* test/socket/test_socket.rb (test_recvmsg_udp_no_arg): new test

Tue Nov 17 19:50:06 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (fstat): declare for mingw.

Tue Nov 17 19:02:59 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in (BASERUBY): use Kernel#print instead of Kernel#p because
	  the baseruby may output CRLF as end of line.

Tue Nov 17 15:34:34 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>
	* NEWS: Added update from Unicode 7.0.0 to 8.0.0 [ci skip]

Tue Nov 17 15:30:30 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>
	* enc/unicode/casefold.h, name2ctype.h: Change Unicode
	  Version for regular expressions from 7.0.0 to
	  8.0.0 (with help from Kimihito Matsui) [Feature #11563]

Tue Nov 17 14:36:00 2015  Kenichi Kamiya  <kachick1@gmail.com>

	* lib/ostruct.rb (dig): Implement OpenStruct#dig
	  [Feature #11688]

Tue Nov 17 14:04:14 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/lib/socket.rb (Socket#recvmsg{,_nonblock}): default values
	  of clen must be nil.

	* ext/socket/ancdata.c (bsock_sendmsg_internal): handle nil of clen.
	  fixes test errors introduced at r52602.

Tue Nov 17 13:43:46 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/lib/socket.rb: UNIXSocket is not always exists.  fixes
	  install error on Windows, introduced at r52601.

Tue Nov 17 11:27:23 2015  Eric Wong  <e@80x24.org>

	* ext/socket/lib/socket.rb (Socket#recvfrom_nonblock):
	  UDPSocket#recvfrom_nonblock):
	  update doc for `exception: false` and destination buffer
	  [ruby-core:69542] [Feature #11229]
	  [ruby-core:69543] [Feature #11242]

Tue Nov 17 11:25:05 2015  Eric Turner  <ericturnerdev@gmail.com>

	* array.c (rb_ary_dig), hash.c (rb_hash_dig): [DOC] Update